[package]
name = "ygopro-cdb-encode-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Rust encoder/decoder and query helpers for YGOPro CDB files"
repository = "https://github.com/placeholder/ygopro-cdb-encode-rs"

[dependencies]
regex = "1.12.2"
rusqlite = { version = "0.37.0", features = ["bundled", "functions"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
thiserror = "2.0.17"
